# KMBL_V1

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
services/openclaw-sync-proxy/: DEPLOY.md  README.md  pyproject.toml
services/openclaw-sync-proxy/src/openclaw_sync_proxy/: __init__.py  main.py
services/orchestrator/: DEPLOY.md  PUBLICATION_PASS_D.md  README.md  REVIEW_LAYER_PASS_C.md  RUNTIME_HARDENING_PASS_A.md  STAGING_HARDENING_PASS_B.md  STAGING_REFINEMENT_PASS_B5.md  _latest_identity_interactive_detail.json  _latest_identity_interactive_status.json  pyproject.toml
services/orchestrator/scripts/: debug_e2e.py  launch_readiness_check.py  local_persisted_run_smoke.py  run_full_graph_smoke.py  run_gallery_strip_smoke.py  run_graph_smoke.py  run_planner_only_smoke.py  smoke_common.py  smoke_graph_e2e.py  smoke_openclaw_direct_post.py  smoke_openclaw_direct_post_generator.py  smoke_openclaw_loopback_e2e.py  smoke_stability.py  tunnel-cloudflared.ps1  tunnel-cloudflared.sh  tunnel-ngrok.ps1  tunnel-ngrok.sh  validate_gallery_smoke.py  validate_identity_spine_http.py
services/orchestrator/scripts/archive/: run_gallery_strip_varied_smoke.py
services/orchestrator/src/kmbl_orchestrator/: __init__.py  config.py  domain.py  errors.py  seeds.py
services/orchestrator/src/kmbl_orchestrator/api/: __init__.py  deps.py  loops.py  main.py  (+11 more)
services/orchestrator/tests/: conftest.py  test_alignment_iteration.py  test_artifact_first_graph_integration.py  test_artifact_first_wire_evaluator_staging.py  test_artifact_inspector_v2.py  test_atomic_persistence.py  test_autonomous_loop_tick.py  test_build_candidate_summary_v1.py  test_build_spec_save_idempotency.py  test_bundle_seed_neutral_and_observability.py  test_candidate_preview_api.py  test_canvas_and_lane_mix_contract.py  test_checkpoint_save_idempotency.py  test_closed_loop_iteration_contract.py  test_compact_routing_integration.py  test_config_supabase_url_validation.py  test_continuation_identity_reuse.py  test_contract_stability.py  test_cool_generation_lane.py  test_crawl_evidence.py  test_crawl_frontier_tags.py  test_crawl_memory_policy.py  test_crawl_system.py  test_critical_fixes.py  test_cross_run_memory.py  test_demo_path_improvements.py  test_demo_preview_coherence.py  test_demo_preview_grounding.py  test_duplicate_rejection.py  test_evaluation_history_api.py  test_evaluation_surface_gate.py  test_evaluation_target_diversity.py  test_evaluator_decision_unit.py  test_evaluator_issue_reconciliation.py  test_evaluator_nomination.py  test_full_graph_pipeline_integration.py  test_gallery_image_artifact_v1.py  test_generator_doc_routing.py  test_generator_iteration_compact_v1.py  test_generator_library_policy.py  (+86 more)
services/orchestrator/tests/archive/: README.md  test_gallery_strip_harness.py  test_gallery_variation_pass.py  test_smoke_stability.py
(+431 files in other folders)
