[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-sync-proxy"
version = "0.1.0"
description = "Thin synchronous HTTP bridge: KMBL v1 /v1/invoke → OpenClaw CLI"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
]

[project.scripts]
openclaw-sync-proxy = "openclaw_sync_proxy.main:run"

[tool.setuptools.packages.find]
where = ["src"]
