[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kmbl-orchestrator"
version = "0.1.0"
description = "KMBL orchestrator: FastAPI + LangGraph control plane (canon: docs/)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "langgraph==0.2.59",
  "langchain-core==0.3.33",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.0",
  "httpx==0.27.2",
  "supabase==2.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "ruff==0.8.4",
  "pyright>=1.1.350",
]
# Optional: pg_catalog checks in scripts/validate_supabase_rpc_live.py (repo root)
live-validation = [
  "psycopg[binary]>=3.1.0",
]

# Opt-in static analysis: run ``python -m pyright`` from services/orchestrator after ``pip install -e '.[dev]'``.
# Tighten ``typeCheckingMode`` to "basic" / "standard" as annotations improve (GraphState TypedDict, etc.).
[tool.pyright]
include = ["src/kmbl_orchestrator"]
pythonVersion = "3.10"
typeCheckingMode = "off"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# Archived tests reference removed modules (e.g. kmbl_orchestrator.image_provider); see tests/archive/README.md
addopts = "--ignore=tests/archive"
